--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </div>
   <div class="correct-guesses">
   </div>
+  <input style="visibility: hidden" type="text">
 </div>
 
 <script src="assets/js/hangman.js"></script>
