--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
   <div class="correct-guesses">
   </div>
-  <input style="visibility: hidden" type="text">
+  <input id="text-field" style="visibility: hidden" type="text">
 </div>
 
 <script src="assets/js/hangman.js"></script>
